--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_DB: warung_pos
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-password}
+      POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -23,7 +23,7 @@ services:
     build: ./backend
     container_name: warung-pos-api
     environment:
-      DATABASE_URL: postgresql://postgres:${DB_PASSWORD:-password}@postgres:5432/warung_pos
+      DATABASE_URL: postgresql://postgres@postgres:5432/warung_pos
       JWT_SECRET: ${JWT_SECRET:-change-me-in-production}
       PORT: 3001
       NODE_ENV: production
